--- a/src/sass/_variable.sass
+++ b/src/sass/_variable.sass
@@ -1,4 +1,4 @@
-$theme-colors : ('noir' : #000,'rouge' : #C42D40,'gri' : #E4E4E4,)
+$theme-colors : ('noir' : #000,'rouge' : #C42D40,'gri' : #E4E4E4,'transpa' : #ffffff00)
 
 $font-family-sans-serif: 'Ubuntu'
     
