avancer section1 manque juste le menu

--- a/src/sass/modules/_header.sass
+++ b/src/sass/modules/_header.sass
@@ -8,6 +8,12 @@ header
         transform: translateX(-50%)
         .bg-hover:hover
             background: #C42D40
+    .bord
+        position: absolute
+        background-image: url(../img/bottom_decoration_img.png)
+        width: 100%
+        height: 16px
+        bottom: -3px
     .carousel-item 
         height: 100vh
         min-height: 350px
