--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16583,6 +16583,13 @@ header .nav {
 header .nav .bg-hover:hover {
   background: #C42D40;
 }
+header .bord {
+  position: absolute;
+  background-image: url(../img/bottom_decoration_img.png);
+  width: 100%;
+  height: 16px;
+  bottom: -3px;
+}
 header .carousel-item {
   height: 100vh;
   min-height: 350px;
@@ -16642,6 +16649,58 @@ header .titre-header h1 .d-1 {
   header .titre-header h1 .d-1 {
     font-size: 40px;
   }
+}
+.section-1 {
+  background-image: url(../img/main_bg.jpg);
+}
+.section-1 .menu {
+  position: relative;
+}
+.section-1 .menu .bg-t-l {
+  background-image: url(../img/box-left-top.png);
+  position: absolute;
+  height: 120px;
+  width: 120px;
+  top: 0;
+  left: 0;
+  background-repeat: no-repeat;
+}
+.section-1 .menu .bg-t-r {
+  background-image: url(../img/box-right-top.png);
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 120px;
+  width: 120px;
+  background-repeat: no-repeat;
+}
+.section-1 .menu .bg-b-l {
+  background-image: url(../img/box-bottom-left.png);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 120px;
+  width: 120px;
+  background-repeat: no-repeat;
+}
+.section-1 .menu .bg-b-r {
+  background-image: url(../img/box-bottom_right.png);
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 120px;
+  width: 120px;
+  background-repeat: no-repeat;
+}
+.section-1 .menu h1 {
+  font-family: "Courgette";
+  font-size: 45px;
+}
+.section-1 .menu h1 .d-2 {
+  font-size: 65px;
+}
+.section-1 .menu h1 .d-1 {
+  font-size: 85px;
 }
 
 /*# sourceMappingURL=app.css.map */
