--- a/src/sass/modules/_section.sass
+++ b/src/sass/modules/_section.sass
@@ -35,7 +35,6 @@
             height: 120px
             width: 120px
             background-repeat: no-repeat
-
         h1
             font-family: 'Courgette'
             font-size: 45px
@@ -43,5 +42,16 @@
                 font-size:65px 
             .d-1
                 font-size:85px
-        
-        .p1-texte
+.section-2
+    background-image: url(../img/team_background.jpg)
+    background-size: cover
+    .d-flex
+        img
+            height: 450px
+h1
+            font-family: 'Courgette'
+            font-size: 45px
+            .d-2
+                font-size:65px 
+            .d-1
+                font-size:85px
