--- a/public/css/.app.css
+++ b/public/css/.app.css
@@ -16657,43 +16657,50 @@ header .titre-header h1 .d-1 {
   position: relative;
 }
 .section-1 .menu .bg-t-l {
+  background-image: url(../img/box-left-top.png);
   position: absolute;
+  height: 120px;
+  width: 120px;
   top: 0;
   left: 0;
+  background-repeat: no-repeat;
 }
 .section-1 .menu .bg-t-r {
+  background-image: url(../img/box-right-top.png);
   position: absolute;
   top: 0;
   right: 0;
+  height: 120px;
+  width: 120px;
+  background-repeat: no-repeat;
 }
 .section-1 .menu .bg-b-l {
+  background-image: url(../img/box-bottom-left.png);
   position: absolute;
   bottom: 0;
   left: 0;
+  height: 120px;
+  width: 120px;
+  background-repeat: no-repeat;
 }
 .section-1 .menu .bg-b-r {
+  background-image: url(../img/box-bottom_right.png);
   position: absolute;
   bottom: 0;
   right: 0;
+  height: 120px;
+  width: 120px;
+  background-repeat: no-repeat;
 }
-.section-1 .menu .icon {
-  font-size: 80px;
-  color: #E4E4E4;
-  height: 200px;
-}
-.section-1 .menu h5 {
-  font-family: "Courgette";
+.section-1 h5 {
+  font-family: "";
   font-size: 30px;
 }
-.section-1 .menu .icon:hover {
-  color: #C42D40;
-  border-right: #C42D40 5px solid;
-}
-.section-1 .menu .border-size {
+.section-1 .border-size {
   border: solid 10px #E4E4E4;
   height: 60%;
 }
-.section-1 .menu .icon-col2 {
+.section-1 .icon-col2 {
   height: 190px;
   border-bottom: 1px #E4E4E4 dotted;
 }
@@ -16702,83 +16709,17 @@ header .titre-header h1 .d-1 {
   .icon-col2 {
     font-size: 12px;
   }
-
-  .none {
+  .icon-col2 .none {
     display: none;
   }
-
-  .bg-t-l {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 25%;
-  }
-
-  .bg-t-r {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 25%;
-  }
-
-  .bg-b-l {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 25%;
-  }
-
-  .bg-b-r {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 25%;
-  }
-}
-@media screen and (max-width: 568px) {
-  .icon-col2 {
-    font-size: 12px;
-  }
-
-  .none {
-    display: none;
-  }
-
-  .bg-t-l {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 30%;
-  }
-
-  .bg-t-r {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 30%;
-  }
-
-  .bg-b-l {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 30%;
-  }
-
-  .bg-b-r {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 30%;
-  }
-  .bg-b-r h1 {
+  .icon-col2 h1 {
     font-family: "Courgette";
     font-size: 45px;
   }
-  .bg-b-r h1 .d-2 {
+  .icon-col2 h1 .d-2 {
     font-size: 65px;
   }
-  .bg-b-r h1 .d-1 {
+  .icon-col2 h1 .d-1 {
     font-size: 85px;
   }
 }
@@ -16801,4 +16742,9 @@ h1 .d-1 {
   font-size: 85px;
 }
 
-/*# sourceMappingURL=app.css.map */
+.icon:hover {
+  color: #C42D40;
+  border-right: #C42D40 5px solid;
+}
+
+/*# sourceMappingURL=.app.css.map */
