--- a/src/sass/modules/_section.sass
+++ b/src/sass/modules/_section.sass
@@ -115,3 +115,71 @@ h1
                 font-size:85px
 
 
+// section table 
+
+.table
+    width: 800px
+    border-radius: 15px
+    background-image: url(../img/book_table_bg.jpg)
+    background-size: cover
+    form
+        margin-left: 125px
+        margin-right: 125px
+        .row
+                .col-12
+                    padding-top: 20px
+        input
+            height: 50px
+            border-radius: 15px
+        select
+            height: 50px
+            border-radius: 15px
+@media screen and ( max-width:768px )
+    .table
+        width:500px
+        form
+            margin-left: 50px
+            margin-right: 50px
+@media screen and ( max-width:568px )
+    .table
+        width:240px
+        form
+            margin-left: 20px
+            margin-right: 20px
+            .row
+                .col-12
+                    padding-top: 20px
+                
+.blog
+    img
+        border-radius: 25px
+        border: solid 10px #E4E4E4 
+    .date
+        background-color: #C42D40
+        width: 80%
+        border-radius: 10px
+        transform: translateY(-50%)
+    .grand
+        font-size: 25px
+    .moins-50
+        transform: translateY(-25%)
+        padding-left: 10%
+@media screen and ( max-width:568px )
+    .blog
+        img
+            width: 100%
+            border-radius: 25px
+            border: solid 10px #E4E4E4 
+        .date
+            background-color: #C42D40
+            width: 80%
+            border-radius: 10px
+            transform: translateY(-50%)
+            
+        .grand
+            font-size: 15px
+        .moins-50
+            padding-left: 10%
+        .date
+            font-size: 10px
+
