--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16884,5 +16884,28 @@ h1 .d-1 {
     font-size: 10px;
   }
 }
+.contact {
+  width: 500px;
+  margin: auto;
+  padding: 20px;
+  border-radius: 15px;
+}
+.contact i {
+  font-size: 50px;
+  padding-top: 20px;
+}
+
+@media screen and (max-width: 568px) {
+  .contact {
+    width: 275px;
+    margin: auto;
+    padding: 20px;
+    border-radius: 15px;
+  }
+  .contact i {
+    font-size: 50px;
+    padding-top: 20px;
+  }
+}
 
 /*# sourceMappingURL=app.css.map */
