--- a/src/sass/modules/_section.sass
+++ b/src/sass/modules/_section.sass
@@ -183,3 +183,24 @@ h1
         .date
             font-size: 10px
 
+
+
+.contact
+    width: 500px
+    margin: auto
+    padding: 20px
+    border-radius: 15px
+    i
+        font-size: 50px
+        padding-top: 20px
+@media screen and ( max-width:568px )
+    .contact
+        width: 275px
+        margin: auto
+        padding: 20px
+        border-radius: 15px
+        i
+            font-size: 50px
+            padding-top: 20px
+
+
