--- a/src/sass/modules/_section.sass
+++ b/src/sass/modules/_section.sass
@@ -203,4 +203,20 @@ h1
             font-size: 50px
             padding-top: 20px
 
-
+.section-3
+    background-image: url(../img/testimonials_background.jpg)
+    background-size: cover
+    .border-size
+        border: solid 10px #888585 
+    .border-client
+        border: solid 3px #ffffff
+        border-radius: 10px
+        width: 60%
+    @media screen and ( max-width:568px )
+        .border-size
+            border: solid 10px #888585 
+        .border-client
+            border: solid 3px #ffffff
+            border-radius: 10px
+            width: 80%
+            margin-top: 10px
