--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16570,6 +16570,42 @@ h3 {
     border-color: #dee2e6;
   }
 }
+footer {
+  position: relative;
+  background-image: url(../img/footer_background.jpg);
+  background-size: cover;
+  font-size: 12px;
+}
+footer .bord {
+  position: absolute;
+  background-image: url(../img/footer_bottom_decoration_img.png);
+  width: 100%;
+  height: 14px;
+  top: 0;
+}
+footer .container-fluid, footer .container-sm, footer .container-md, footer .container-lg, footer .container-xl {
+  width: 70%;
+}
+footer .container-fluid a, footer .container-sm a, footer .container-md a, footer .container-lg a, footer .container-xl a {
+  color: #ffffff;
+  font-size: 30px;
+}
+footer .container-fluid .logo, footer .container-sm .logo, footer .container-md .logo, footer .container-lg .logo, footer .container-xl .logo {
+  width: 200px;
+}
+footer .container-fluid .badge, footer .container-sm .badge, footer .container-md .badge, footer .container-lg .badge, footer .container-xl .badge {
+  font-size: 14px;
+}
+footer .foo-rouge {
+  height: 100px;
+  background-color: #C42D40;
+}
+
+@media screen and (max-width: 768px) {
+  footer .container-fluid, footer .container-sm, footer .container-md, footer .container-lg, footer .container-xl {
+    width: 85%;
+  }
+}
 header {
   position: relative;
   background-image: url("./public/img/banner1.jpg"), linear-gradient(#000000c0, #000000c0);
@@ -16911,13 +16947,21 @@ h1 .d-1 {
   background-image: url(../img/testimonials_background.jpg);
   background-size: cover;
 }
+.section-3 img {
+  width: 75%;
+}
 .section-3 .border-size {
   border: solid 10px #888585;
 }
 .section-3 .border-client {
   border: solid 3px #ffffff;
   border-radius: 10px;
-  width: 60%;
+  width: 65%;
+}
+@media screen and (max-width: 768px) {
+  .section-3 .border-client {
+    width: 50%;
+  }
 }
 @media screen and (max-width: 568px) {
   .section-3 .border-size {
@@ -16926,7 +16970,7 @@ h1 .d-1 {
   .section-3 .border-client {
     border: solid 3px #ffffff;
     border-radius: 10px;
-    width: 80%;
+    width: 90%;
     margin-top: 10px;
   }
 }
